# form-collector

./: .gitignore  LICENSE  README.md  pyproject.toml
example_data/: allowed_respondents.json  config.toml
rsg_form_collector/: .gitignore  __main__.py  script.py
