[tool.poetry]
name = "rsg-form-collector"
version = "0.1.0"
description = ""
authors = ["Alex Manning <alexander.manning@stfc.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
google-api-python-client = "^2.98.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
google-auth = "^2.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
